--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -9,7 +9,7 @@ header {
 }
 
 section {
-  padding: 48px 0;
+  padding: 16px 0;
 }
 
 main {
@@ -22,4 +22,5 @@ main {
 footer {
   color: grey;
   font-size: 13px;
+  padding-bottom: 48px;
 }
